[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resource/Enemies/wingMan1.png" type="Texture" id=1]
[ext_resource path="res://Resource/Enemies/wingMan3.png" type="Texture" id=2]
[ext_resource path="res://Resource/Enemies/wingMan5.png" type="Texture" id=3]
[ext_resource path="res://Resource/Enemies/wingMan4.png" type="Texture" id=4]
[ext_resource path="res://Resource/Enemies/wingMan2.png" type="Texture" id=5]
[ext_resource path="res://Game/Enemys/WindMan.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.4999, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45, 7.5 )

[node name="WindMan" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
z_index = 35
z_as_relative = false
collision_layer = 4
collision_mask = 2
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_as_relative = false
frames = SubResource( 1 )
frame = 4

[node name="DetectPlayer" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17.5 )
rotation = -0.00239264
shape = SubResource( 2 )

[node name="DetectTrample" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="DetectTrample"]
position = Vector2( 0, -27.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectTrample" to="." method="_on_DetectTrample_body_entered"]
